# ai-api-agent

./: .gitignore  README.md  app.py  config.example.yaml  main.py  pyproject.toml  requirements.txt
src/: agent.py  ai_client.py  api_docs.py  api_executor.py  config.py  conversation_store.py  tool_converter.py
src/ai_agent/: __init__.py  app.py  main.py  settings.py
src/ai_agent/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
src/ai_agent/api/: __init__.py  routes.py  schemas.py
src/ai_agent/api_loader/: __init__.py  converter.py  fetcher.py  parser.py
src/ai_agent/execution/: __init__.py  executor.py
src/ai_agent/llm/: __init__.py  _providers.py  base.py  callbacks.py  factory.py
tests/: conftest.py  test_parser.py
web/: app.js  index.html
